skill logo alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -131,18 +131,24 @@ header.sticky ul li a
 }
 .content
 {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    justify-content: center;
 
 }
-.content .w50 img
+.about .content {
+    display: flex;
+    justify-content: right;
+}
+.about .content img 
 {
     border: #fff solid 17px;
     transform: rotate(0deg);
+    margin-left: 30px;
 }
 .contentBx
 {
-    padding-right: 30px;
+    padding-right: 50px;
+    width:70%;
 }
 .contentBx h3
 {
@@ -221,81 +227,6 @@ img
     transform-style: preserve-3d;
     transform: perspective(1000px);
 }
-.skill
-{
-    background: url(../image/bg/about2.jpg);
-    background-size: cover;
-}
-.skill .content
-{
-    
-    display:flex;
-    justify-content: space-around;
-    flex-wrap:wrap;
-}
-
-.skill .content .skillBx
-{
-    padding:40px 20px;
-    box-shadow: 0 5px 20px rgba(0.9, 0.4, 0.4, 0.4);
-    color:#111;
-    margin: 20px;
-    text-align:center;
-    transition:0.5s;
-    border-radius: 30px;
-}
-.skill .content .skillBx:hover
-{
-    background: rgb(223, 223, 223);
-}
-.skillcnt ul li
-{
-    position: relative;
-    list-style: none;
-    display:flex;
-}
-.eachskill
-{
-    position: relative;
-}
-.eachskill img
-{
-    width:70px;    
-}
-.skillcnt ul li .eachskill
-{
-    
-    border: solid #fff;
-    display: flex;
-    align-items: center;
-    margin: 10px;
-    background: #EEE;
-}
-.skillcnt ul li .eachskill:hover{
-    background:#a7a8a8;
-    opacity: 50%;
-}
-.skillcnt .eachskill h5
-{
-    padding-right : 10px;
-}
-
-.skillcnt .eachskill
-{
-    
-    border: solid #fff;
-    display: flex;
-    align-items: center;
-    border: 1px solid #E0E0E0;
-    border-radius: 8px;
-    margin: 10px;
-    background: #EEE;
-}
-.skillcnt .eachskill h5
-{
-    padding-right : 10px;
-}
-
 .certificate
 {
     background: url(../image/bg/certificate.jpg);
@@ -402,7 +333,10 @@ color:#999;
 }
 .contactInfoBx
 {
+    display: flex;
+    flex-direction: column;
     position: relative;
+    justify-content: left;
 }
 .contactInfoBx .box
 {
@@ -441,10 +375,6 @@ color:#999;
     text-align:center;
     padding:10px;
 }
-
-
-
-
 .skills
 {
     background: url(../image/bg/about2.jpg);
@@ -452,9 +382,9 @@ color:#999;
 }
 .skills .content
 {
+    display: flex;
+    justify-content: center;
     
-    display:flex;
-    flex-wrap:wrap;
 }
 
 .skills .content .skillsBx
@@ -469,7 +399,7 @@ color:#999;
 }
 .skills .content .skillsBx:hover
 {
-    background: rgb(223, 223, 223);
+    background:#31d3c8;
 }
 .eachskills
 {
@@ -487,12 +417,10 @@ color:#999;
     flex-flow: wrap;
     align-items: center;
     margin: 10px;
-    background: #31d3c8;
-    border:#fff solid 1px;
+    background: rgb(173, 172, 172);
     border-radius:10px;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.4);
 }
-
-
 .skillscnt .eachskills
 {
     align-items: stretch;
@@ -504,7 +432,6 @@ color:#999;
     border:rgb(223, 221, 221) solid 2px;
     border-radius:4px;
 }
-
 
 
 
@@ -602,7 +529,7 @@ color:#999;
     }
     .content 
     {
-        flex-direction:column-reverse;
+        flex-direction:column;
     }
     .w50
     {
